# TasksManagementBot

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE.md  README.md  config.env.sample  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: release.yaml  tox-checks.yml  tox-pytest.yml
.run/: main.run.xml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/: main.py  settings.py
src/business_logic/: authenticaton.py  module.py  router.py
src/business_logic/base/: operation.py
src/messenger/: base.py  interface.py  menu.py  module.py  telegram.py
src/odoo/: client.py  module.py
src/odoo_tasks_management/: main.py  settings.py
src/odoo_tasks_management/business_logic/: menu.py  module.py  router.py
src/odoo_tasks_management/business_logic/base/: exc.py  operation.py  procedure.py
src/odoo_tasks_management/business_logic/menu/: create_task_menu.py  mark_task_completed.py  projects_menu.py  projects_tasks_menu.py  root_menu.py  tasks_project_menu.py
src/odoo_tasks_management/business_logic/periodic/: check_for_notification.py  database_synchronization.py  scheduler.py
src/odoo_tasks_management/business_logic/procedures/: authentication.py  factory.py
src/odoo_tasks_management/messenger/: interface.py  module.py  telegram.py
src/odoo_tasks_management/odoo/: client.py  module.py
src/odoo_tasks_management/persistence/: db.py  models.py  module.py
src/persistence/: models.py  module.py
tests/: test_sample.py  test_task_close_sequence.py
tests/business_logic/: test_router.py
