[project]
name = "odoo-tasks-management-bot"
version = "0.0.1"

description = "Application to run a Telegram bot to manage tasks in Odoo CRM module"
readme = "README.md"

requires-python = ">=3.9"

license = { "text" = "PROPRIETARY SOFTWARE" }
keywords = ["internal", "telegram", "odoo"]

authors = [
    { name = "A. Random Developer1", email = "author1@example.com" },
    { name = "A. Random Developer2", email = "author2@example.com" },
]

maintainers = [
    { name = "A. Great Maintainer1", email = "maintainer1@example.com" },
    { name = "A. Great Maintainer2", email = "maintainer2@example.com" },
]

classifiers = [

    "Development Status :: 3 - Alpha",
    "Intended Audience :: Internal",
    "Topic :: Project Management :: Tasks management",
    "License :: Proprietary :: Internal Use Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pyTelegramBotAPI~=4.10.0",
    "sqlalchemy~=2.0.3",
    "pydantic~=1.10.5",
    "python-dotenv~=0.21.1",
    "injector~=0.20.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "mockito",
    "black"
]

[project.scripts]
tasks-management-bot = "odoo_tasks_management.main:main"

[tool.setuptools]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py39', 'py310']
include = '''
(
    ^/tests/.*[.]py$
  | ^/src/.*[.]py$
  | ^/setup[.]py
)
'''
exclude = '''
(
    __pycache__
  | ^/env/.*
)
'''
