[project]
name = "weba-odoo-tasks-management-bot"
version = "0.0.1"

description = "Application to run a Telegram bot to manage tasks in Odoo CRM module"
keywords = ["internal", "telegram", "odoo", "tasks management"]
readme = "README.md"
license = { "file" = "LICENSE.md" }

requires-python = ">=3.9"

authors = [
    { name = "A. Random Developer1", email = "author1@example.com" },
    { name = "A. Random Developer2", email = "author2@example.com" },
]

maintainers = [
    { name = "A. Great Maintainer1", email = "maintainer1@example.com" },
    { name = "A. Great Maintainer2", email = "maintainer2@example.com" },
]

classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Internal",
    "Topic :: Project Management :: Tasks management",
    "License :: Proprietary :: Internal Use Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pyTelegramBotAPI",
    "sqlalchemy",
    "psycopg2",
    "pydantic",
    "python-dotenv",
    "injector",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pycodestyle",
    "flake8",
]

[project.scripts]
tasks-management-bot = "odoo_tasks_management.main:main"

[tool.setuptools]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# Additional configuration for development tools
[tool.pylint]
max-line-length = 80
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
