[tool.poetry]
name = "weba-odoo-tasks-management-bot"
version = "0.0.1"
description = "Application to run a Telegram bot to manage tasks in Odoo CRM module"
authors = [
    "Author1 <author1@example.com>",
    "Author2 <author2@example.com>",
]
readme = "README.md"
license = "LICENSE.md"

packages = [{include = "src"}]

classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Internal",
    "Topic :: Project Management :: Tasks management",
    "License :: Proprietary :: Internal Use Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
tasks-management-bot = "odoo_tasks_management.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "*"
sqlalchemy = "*"
psycopg2 = "*"
pydantic = "*"
python-dotenv = "*"
injector = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mockito = "*"
pylint = "*"
pycodestyle = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Additional configuration for development tools
[tool.pylint.messages_control]
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
]
